...
        })
        
    }
    
    func didSendForgotPasswordLink(success: Bool, message: String) {
       if success {
            let alertC = UIAlertController(title: "Email sent..", message: message, preferredStyle: .alert)
            let alertAction = UIAlertAction(title: "OK", style: .default, handler: self.navigateToLogin)
            
            alertC.addAction(alertAction)
            self.present(alertC, animated: true, completion: nil)
        }else{
            let alertC = UIAlertController(title: "Error.", message: message, preferredStyle: .alert)
            let alertAction = UIAlertAction(title: "OK", style: .default, handler: nil)
...
