...
    static let SLIDER_DATA = """
       {
      "sliders":[
         {
            "image" : "slider1",
            "title" :"Post your Events",
            "description":"You can upload ay nibm events",
            "getstart":"0"
         },
        {
            "image" : "slider2",
            "title" :"Post your Events",
            "description":"You can upload ay nibm events",
...
