...
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0GK-QZ-N9E">
                                    <rect key="frame" x="0.0" y="0.0" width="384" height="40"/>
                                    <color key="backgroundColor" red="1" green="0.1146549142" blue="0.6252402467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <constraints>
                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="g81-pW-Yv6"/>
                                    </constraints>
                                    <state key="normal" title="Let's Login">
                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </state>
                                    <connections>
                                        <action selector="goToLogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="B7w-9F-ysF"/>
                                    </connections>
                                </button>
...
