...
                                                                    <color key="value" red="0.53718969350000001" green="0.204596164" blue="0.94963005119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </userDefinedRuntimeAttribute>
                                                            </userDefinedRuntimeAttributes>
                                                        </button>
                                                    </subviews>
                                                </stackView>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="5e8-dh-OZw">
                                                    <rect key="frame" x="10" y="280" width="394" height="50"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="WlD-u8-6wG"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                        <constraint firstAttribute="height" constant="35" id="vSF-94-EIe"/>
                                                    </constraints>
                                                </imageView>
                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="6y0-QP-lOt">
                                                    <rect key="frame" x="85" y="20" width="58" height="50"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2gg-88-ZXq">
                                                            <rect key="frame" x="0.0" y="0.0" width="58" height="21"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4b-Q8-Isj">
...
                                <color key="backgroundColor" red="0.78567702839999998" green="0.1329141351" blue="0.99911946060000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Zgg-ra-eTs"/>
                                    <constraint firstAttribute="width" constant="80" id="sqC-uz-hap"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="ABeeZee-Regular" family="ABeeZee" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ym7-8R-5Yi">
                                        <rect key="frame" x="182" y="174.5" width="50" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="MQu-sD-2fw"/>
                                            <constraint firstAttribute="height" constant="30" id="MU9-Nd-IMv"/>
                                        </constraints>
                                        <state key="normal" title="Select"/>
                                        <connections>
                                            <action selector="btnSelectProfileImage:" destination="War-Vb-5nu" eventType="touchUpInside" id="77n-gh-2hh"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
